# claude

./: .dockerignore  .gitignore  DEPLOYMENT.md  LICENSE  README.md  SETUP.md  Shop table.md  USER_MANUAL.md  docker-compose.dev.sh  docker-compose.yml  init.sql  maxflow-image-app.md  maxflow_image_app_summary.md  maxflow_project_summary.md  package-lock.json  package.json  pytest.ini  register_makeit3d_key.py  requirements.test.txt  setup.py  shopify.app.toml  test_data.sql  tsconfig.json
backend/: .dockerignore  Dockerfile  Dockerfile.backend  Dockerfile.celery  Dockerfile.worker  Procfile  README.md  app.py  apply_migration.py  celery_app.py  database.py  env.development  env.template  logging_config.py  main.py  models.py  pyproject.toml  railway.backend.json  railway.celery.image.json  railway.celery.json  railway.celery.polling.json  railway.json  requirements.test.txt  requirements.txt  run_dev.py  schemas.py  start.sh  tasks.py  test_connection.py  test_endpoints.py
backend/app/: celery_app.py  celery_beat.py  database.py  env.template  logging_config.py  main.py
backend/docker/: Dockerfile  docker-compose.yml
backend/middleware/: rate_limiter.py
backend/migrations/: 001_initial.sql
backend/routers/: auth_callback.py  auth_install.py  fileserve_router.py  image_routes.py  me_router.py  upload_router.py  webhooks_router.py
backend/routes/: auth.py  shopify.py  upload.py
backend/scripts/: apply_migrations.py  start.sh  start_worker.sh
backend/services/: supabase.py
backend/tasks/: image_tasks.py
backend/tests/: conftest.py  test_image_processing.py  (+1 more)
(+300 files in other folders)
